k8s/apps-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: cinema-ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway-container
          image: ghcr.io/sagarsingh8978/api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: cinema-ticketing
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: api-gateway
---
# ========================================================
# USER SERVICE (WITH PROD PROFILE ACTIVATED)
# ========================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: cinema-ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service-container
          image: ghcr.io/sagarsingh8978/user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: cinema-ticketing
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: user-service
---
# ========================================================
# MOVIE SERVICE (WITH PROD PROFILE ACTIVATED)
# ========================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service-deployment
  namespace: cinema-ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - name: movie-service-container
          image: ghcr.io/sagarsingh8978/movie-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  namespace: cinema-ticketing
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: movie-service
---
# ========================================================
# BOOKING SERVICE (WITH PROD PROFILE ACTIVATED)
# ========================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
  namespace: cinema-ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service-container
          image: ghcr.io/sagarsingh8978/booking-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: cinema-ticketing
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: booking-service
---
# ========================================================
# PAYMENT SERVICE (WITH PROD PROFILE ACTIVATED)
# ========================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-deployment
  namespace: cinema-ticketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service-container
          image: ghcr.io/sagarsingh8978/payment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: cinema-ticketing
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: payment-service
